--- a/Pràctica.ipynb
+++ b/Pràctica.ipynb
@@ -181,6 +181,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "665e0f43",
+   "metadata": {},
+   "source": [
+    "**Divisió en trigrames**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "13ef1805",
    "metadata": {},
    "source": [
