--- a/Pràctica.ipynb
+++ b/Pràctica.ipynb
@@ -365,7 +365,7 @@
     "            total += math.log(prob)\n",
     "        return total\n",
     "\n",
-    "print(\"Clase LidstoneModel definida ✓\")"
+    "print(\"Clase LidstoneModel definida\")"
    ]
   },
   {
@@ -471,7 +471,7 @@
     "    print(f\"  λ = {lam:<6}  →  Accuracy = {acc:.4f}  ({correct}/{total})\")\n",
     "\n",
     "best_lam = max(lidstone_results, key=lidstone_results.get)\n",
-    "print(f\"\\n  ★ Mejor λ = {best_lam}  con accuracy = {lidstone_results[best_lam]:.4f}\")"
+    "print(f\"\\n Mejor λ = {best_lam}  con accuracy = {lidstone_results[best_lam]:.4f}\")"
    ]
   },
   {
