--- a/practica1.ipynb
+++ b/practica1.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "72181190",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,8 @@
    ],
    "source": [
     "class BackoffNgramModel:\n",
-    "    \"\"\"Model de llenguatge amb back-off: retrocedeix a n-grames d'ordre inferior.\"\"\"\n",
+    "    \"\"\"Model de llenguatge amb back-off: retrocedeix a n-grames d'ordre inferior.\n",
+    "       Utilitza cache per evitar recalcular probabilitats repetides.\"\"\"\n",
     "    \n",
     "    def __init__(self, ngram_counts_by_n, vocab_sizes, max_n, alpha=0.4, lam=0.01):\n",
     "        \"\"\"\n",
@@ -576,33 +577,39 @@
     "            alpha: factor de penalització al retrocedir (0 < alpha < 1).\n",
     "            lam: lambda per al suavitzat de Lidstone de l'últim nivell (unigrames).\n",
     "        \"\"\"\n",
-    "        self.counts = ngram_counts_by_n  # {n: Counter}\n",
+    "        self.counts = ngram_counts_by_n\n",
     "        self.totals = {n: sum(c.values()) for n, c in ngram_counts_by_n.items()}\n",
     "        self.vocab_sizes = vocab_sizes\n",
     "        self.max_n = max_n\n",
     "        self.alpha = alpha\n",
     "        self.lam = lam\n",
+    "        self._cache = {}  # Cache per memoització\n",
+    "        \n",
+    "        # Pre-calcular log(alpha) per eficiència\n",
+    "        self._log_alpha = math.log(alpha)\n",
     "    \n",
     "    def log_prob_ngram(self, ngram):\n",
-    "        \"\"\"Calcula log P(ngram) amb back-off recursiu.\"\"\"\n",
+    "        \"\"\"Calcula log P(ngram) amb back-off recursiu i cache.\"\"\"\n",
+    "        if ngram in self._cache:\n",
+    "            return self._cache[ngram]\n",
+    "        \n",
     "        n = len(ngram)\n",
     "        \n",
-    "        # Si l'n-grama existeix al model d'ordre n, usar probabilitat observada\n",
+    "        # Si l'n-grama existeix al model d'ordre n\n",
     "        if n in self.counts and self.counts[n].get(ngram, 0) > 0:\n",
-    "            prob = self.counts[n][ngram] / self.totals[n]\n",
-    "            return math.log(prob)\n",
+    "            result = math.log(self.counts[n][ngram] / self.totals[n])\n",
+    "        elif n > 1:\n",
+    "            # Back-off: retrocedir al sufix de longitud n-1\n",
+    "            result = self._log_alpha + self.log_prob_ngram(ngram[1:])\n",
+    "        else:\n",
+    "            # Últim recurs: unigrama amb Lidstone\n",
+    "            count = self.counts.get(1, Counter()).get(ngram, 0)\n",
+    "            N = self.totals.get(1, 1)\n",
+    "            V = self.vocab_sizes.get(1, 1)\n",
+    "            result = math.log((count + self.lam) / (N + self.lam * V))\n",
     "        \n",
-    "        # Back-off: retrocedir a n-1, amb penalització alpha\n",
-    "        if n > 1:\n",
-    "            # Retrocedim al sufixe de longitud n-1\n",
-    "            shorter = ngram[1:]  # usar el sufix\n",
-    "            return math.log(self.alpha) + self.log_prob_ngram(shorter)\n",
-    "        \n",
-    "        # Últim recurs: unigrama amb Lidstone\n",
-    "        count = self.counts.get(1, Counter()).get(ngram, 0)\n",
-    "        N = self.totals.get(1, 1)\n",
-    "        V = self.vocab_sizes.get(1, 1)\n",
-    "        return math.log((count + self.lam) / (N + self.lam * V))\n",
+    "        self._cache[ngram] = result\n",
+    "        return result\n",
     "    \n",
     "    def log_prob_text(self, text):\n",
     "        \"\"\"Log-probabilitat total d'un text usant n-grames d'ordre max_n.\"\"\"\n",
@@ -614,7 +621,7 @@
     "            total += self.log_prob_ngram(ngram)\n",
     "        return total\n",
     "\n",
-    "print(\"Classe BackoffNgramModel definida.\")"
+    "print(\"Classe BackoffNgramModel definida (amb cache).\")"
    ]
   },
   {
